# deup-llm

./: BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASING.md  llm_deup_gsm8k_results.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  common.py  run_all.py  run_cifar_proxy.py  run_finance_walkforward.py  run_n_sweep.py  run_regression_benchmark.py
benchmarks/results/: cifar_proxy.json  finance_walkforward.json  n_sweep.json  regression_benchmark.json  summary.json
docs/: benchmarks.md  calibration.md  concepts.md  decomposition.md  domains.md  features.md  getting-started.md  index.md  pytorch-integration.md  reliability.md  theory.md
docs/api/: calibration.md  decomposition.md  diagnostics.md  domains.md  estimators.md  features.md
docs/tutorials/: active-learning.md  classification-conformal.md  finance-ranking.md  llm-scenario-a.md  tabular-regression.md
examples/: llm_scenario_a_gsm8k.py  mapie_interop.py
src/deup/: __init__.py  estimators.py  splitters.py
src/deup/calibration/: __init__.py  conformal.py
src/deup/core/: __init__.py  aleatoric.py  decompose.py  error_estimator.py  losses.py  oof.py
src/deup/core/features/: __init__.py  density.py  distance.py  pipeline.py  raw.py  residual.py  seen_bit.py  variance.py
src/deup/diagnostics/: __init__.py  aggregation.py  health.py
src/deup/domains/: __init__.py  finance.py  llm.py  tabular.py  vision.py
tests/: test_benchmark_smoke.py  test_calibration.py  test_decompose.py  test_diagnostics.py  test_domains.py  test_domains_llm.py  test_estimators.py  test_features.py  test_losses.py  test_oof.py  test_splitters.py  test_tabular_backends.py  test_tutorials.py
