[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deup"
version = "0.0.1.dev0"
description = "Direct Epistemic Uncertainty Prediction (DEUP) for any scikit-learn model, with first-class time-series support."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ursina Sanderink" }]
keywords = [
    "uncertainty",
    "epistemic-uncertainty",
    "deup",
    "machine-learning",
    "scikit-learn",
    "conformal-prediction",
    "time-series",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gbm = ["lightgbm>=4.0"]
torch = ["torch>=2.0", "gpytorch>=1.11"]
finance = ["pandas>=2.0"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/ursinasanderink/deup"
Repository = "https://github.com/ursinasanderink/deup"
Issues = "https://github.com/ursinasanderink/deup/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deup"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/deup"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
