[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deup"
version = "0.4.2"
description = "Direct Epistemic Uncertainty Prediction (DEUP) for scikit-learn and gradient-boosting models, with first-class time-series support."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ursina Sanderink" }]
keywords = [
    "uncertainty",
    "epistemic-uncertainty",
    "deup",
    "machine-learning",
    "scikit-learn",
    "conformal-prediction",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "numpy>=1.23",
    "scikit-learn>=1.3",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
]

[project.optional-dependencies]
gbm = ["lightgbm>=4.0"]
xgb = ["xgboost>=2.0"]
catboost = ["catboost>=1.2"]
gbm-all = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
torch = ["torch>=2.0", "gpytorch>=1.11"]
llm = ["torch>=2.0", "transformers>=4.40", "accelerate>=0.28", "tqdm>=4.66"]
finance = ["pandas>=2.0", "pyarrow>=14.0"]
parity = ["pandas>=2.0", "pyarrow>=14.0", "lightgbm>=4.0", "scipy>=1.10"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "matplotlib>=3.7",
]
benchmark = ["matplotlib>=3.7", "pyarrow>=14.0", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/ursinasanderink/deup"
Repository = "https://github.com/ursinasanderink/deup"
Issues = "https://github.com/ursinasanderink/deup/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deup"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/deup"]
warn_unused_configs = true
# scikit-learn ships no type stubs; subclassing its mixins is unavoidable here.
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "lightgbm.*", "pandas.*", "xgboost.*", "catboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = [".", "src"]
